# vml

./: .gitignore  CMakeLists.txt  README.md
include/vml/: __arithmetic.hpp  __base.hpp  __common.hpp  __complex.hpp  __ext.hpp  __fwd.hpp  __intrin.hpp  __matrix.hpp  __quaternion.hpp  __shapes.hpp  __undef.hpp  __vector.hpp  arithmetic.hpp  common.hpp  complex.hpp  core.hpp  ext.hpp  fwd.hpp  intrin.hpp  matrix.hpp  quaternion.hpp  shapes.hpp  undef.hpp  vector.hpp  vml.hpp
test/: arithmetic.t.cpp  base.t.cpp  color.t.cpp  complex.t.cpp  ext.t.cpp  matrix.t.cpp  quaternion.t.cpp  shapes.t.cpp  vector.t.cpp
